fixing overflow on cnw header

--- a/extensions/wikia/CreateNewWiki/css/CreateNewWiki.scss
+++ b/extensions/wikia/CreateNewWiki/css/CreateNewWiki.scss
@@ -72,6 +72,7 @@
 		font-size: $wds-typescale-size-plus-2;
 		font-weight: bold;
 		margin: 0 0 $content-spacing-regular 0;
+		overflow: visible;
 		padding: 0;
 	}
 
